kubernetes/apps/collaboration/matrix/app/httproute.yaml
---
# Synapse Client-Server API and well-known
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrix-synapse
spec:
  hostnames: ["matrix.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: matrix-synapse
          port: 8008
---
# Well-known delegation on the base domain
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrix-wellknown
spec:
  hostnames: ["${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /.well-known/matrix
      backendRefs:
        - name: matrix-synapse-wellknown-lighttpd
          port: 80
---
# Element Web client
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: element
spec:
  hostnames: ["element.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: element-web
          port: 80
